	!! Changed pagebrowser template file configuration from search.pagebrowser.templateFeile to templateFiles.pagebrowser
	!! Removed compatibility code for TYPO3 version before 4.5
	!! Changed calculation of site hashes, we're now using SHA-1 instead of MD5 - You have to reindex everything to support the changes
	! Changed Index Queue tables to use InnoDB engine

	* Added Polish Translations, credits Jan Slusarczyk
	* Added initial API for Index Queue Item Indexing Properties
	* Added tx_solr_indexqueue_Item::getSite()
	* Changed logging of an invalid Index Queue request to also log the request object and Index Queue header
	* Changed logging of failed Index Queue page indexer requests to also log when invalid json was returned
	* Added method tx_solr_Site::getPages() to get all pages (page IDs) of a site
	* Refactored initialization of the Index Queue to be more modular and allow finer control over what goes into the Index Queue
	* Added a column in the Index Queue table to signal that an item has additional indexing properties
	* Added a column in the Index Queue indexing properties table to identify which site a property belongs to
	* Changed the Index Queue to also remove indexing properties for existing Index Queue items when clearing the queue
	* Added support for persisting indexing properties of Index Queue items
	* Added Index Queue support for resolving Mount Pages and adding them to the queue
	* Added lazy loading for Index Queue item record data
	* Added granular settings for logging Index Queue indexing
	* Fixed missing item_uid / record uid in tx_solr_indexqueue_Item
	* Added tx_solr_indexqueue_Item::hasIndexingProperty()
	* Fixed loading of Index Queue item indexing properties
	* Added automatic conversion of boolean parameters to string in tx_solr_indexqueue_PageIndexerRequest::setParameter()
	* Added Index Queue page indexer request logging in frontend helpers