@@ -46,8 +46,8 @@ class tx_solr_facet_UsedFacetRenderer extends tx_solr_facet_SimpleFacetOptionsRe
 	protected $filterValue;
 
 		// FIXME merge into default renderer as renderUsedFacetOption()
-	public function __construct($facetName, $filterValue, $filter , array $facetConfiguration,  tx_solr_Template $template, tx_solr_Query $query) {
-		parent::__construct($facetName, array(), $facetConfiguration, $template, $query);
+	public function __construct($facetName, $filterValue, $filter , tx_solr_Template $template, tx_solr_Query $query) {
+		parent::__construct($facetName, array(), $template, $query);
 
 		$this->filter      = $filter;
 		$this->filterValue = $filterValue;
