@@ -17,6 +17,7 @@
 	!! Changed pagebrowser template file configuration from search.pagebrowser.templateFeile to templateFiles.pagebrowser
 	!! Removed compatibility code for TYPO3 version before 4.5
 	!! Changed calculation of site hashes, we're now using SHA-1 instead of MD5 - You have to reindex everything to support the changes
+	!! Removed the renderer facet configuration option, this is now handled through facet types
 	! Changed Index Queue tables to use InnoDB engine
 
 	* Added Polish Translations, credits Jan Slusarczyk
